depreduce/src/test_data/reducers/cxx.out
Sorted nodes in topological order:
  //main:main.dwp
  //main:main.stripped
  @bazel_tools//tools/cpp:toolchain_type
  //main:main
  @rules_cc//:link_extra_lib
  @rules_cc//:link_extra_libs
  @rules_cc//:empty_lib
  @bazel_tools//tools/cpp:malloc
  @bazel_tools//tools/cpp:link_extra_lib
  @bazel_tools//tools/cpp:link_extra_libs
  @bazel_tools//tools/cpp:empty_lib
  //main:main.cpp
  //libb:libb
  //libb:b.h
  //libb:b.cpp
  //liba:liba
  @bazel_tools//tools/cpp:current_cc_toolchain
  @rules_cc//cc:current_cc_toolchain
  //liba:a.h
  //liba:a.cpp
Processing node: //main:main.dwp
Processing node: //main:main.stripped
Processing node: @bazel_tools//tools/cpp:toolchain_type
Processing node: //main:main
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main.stripped (because of no in-degree)
    Failed to remove //main:main.stripped -> //main:main
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main.dwp (because of no in-degree)
    Failed to remove //main:main.dwp -> //main:main
  No changes made, skipping build
Processing node: @rules_cc//:link_extra_lib
  Trying a new candidate set
    Failed to remove //main:main -> @rules_cc//:link_extra_lib
  No changes made, skipping build
Processing node: @rules_cc//:link_extra_libs
  Trying a new candidate set
    Failed to remove @rules_cc//:link_extra_lib -> @rules_cc//:link_extra_libs
  No changes made, skipping build
Processing node: @rules_cc//:empty_lib
  Trying a new candidate set
    Failed to remove @rules_cc//:link_extra_libs -> @rules_cc//:empty_lib
  No changes made, skipping build
Processing node: @bazel_tools//tools/cpp:malloc
  Trying a new candidate set
    Failed to remove //main:main -> @bazel_tools//tools/cpp:malloc
  No changes made, skipping build
Processing node: @bazel_tools//tools/cpp:link_extra_lib
  Trying a new candidate set
    Failed to remove //main:main -> @bazel_tools//tools/cpp:link_extra_lib
  No changes made, skipping build
Processing node: @bazel_tools//tools/cpp:link_extra_libs
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:link_extra_lib -> @bazel_tools//tools/cpp:link_extra_libs
  No changes made, skipping build
Processing node: @bazel_tools//tools/cpp:empty_lib
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:link_extra_libs -> @bazel_tools//tools/cpp:empty_lib
  No changes made, skipping build
Processing node: //main:main.cpp
  Trying a new candidate set
    Removed //main:main -> //main:main.cpp
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 3 targets (3 packages loaded, 0 targets configured)
        Analyzing: 3 targets (3 packages loaded, 0 targets configured)
        
        INFO: Analyzed 3 targets (3 packages loaded, 7 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/simple-cxx-project/main/BUILD:3:10: Linking main/main failed: (Exit 1): gcc failed: error executing CppLink command (from target //main:main) /usr/bin/gcc @bazel-out/k8-fastbuild/bin/main/main-0.params
        
        Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
        ld.lld: error: undefined symbol: main
        >>> referenced by /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/Scrt1.o:(_start)
        collect2: error: ld returned 1 exit status
        Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.180s, Critical Path: 0.07s
        INFO: 5 processes: 6 action cache hit, 3 internal, 2 linux-sandbox.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //main:main.cpp
  No changes made, skipping build
Processing node: //libb:libb
  Trying a new candidate set
    Removed //main:main -> //libb:libb
  Build succeeded

Processing node: //libb:b.h
  Trying a new candidate set
    Only consider deps for //libb:b.h -> //libb:libb (because of no in-degree)
    Failed to remove //libb:libb -> //libb:b.h
  No changes made, skipping build
Processing node: //libb:b.cpp
  Trying a new candidate set
    Only consider deps for //libb:b.cpp -> //libb:libb (because of no in-degree)
    Failed to remove //libb:libb -> //libb:b.cpp
  No changes made, skipping build
Processing node: //liba:liba
  Trying a new candidate set
    Only consider deps for //liba:liba -> //libb:libb (because of no in-degree)
    Removed //libb:libb -> //liba:liba
  Build succeeded

  Trying a new candidate set
    Removed //main:main -> //liba:liba
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 3 targets (1 packages loaded, 0 targets configured)
        Analyzing: 3 targets (1 packages loaded, 0 targets configured)
        
        INFO: Analyzed 3 targets (1 packages loaded, 2 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/simple-cxx-project/main/BUILD:3:10: Compiling main/main.cpp failed: (Exit 1): gcc failed: error executing CppCompile command (from target //main:main) /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer '-std=c++17' -MD -MF ... (remaining 24 arguments skipped)
        
        Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
        main/main.cpp:3:10: fatal error: a.h: No such file or directory
            3 | #include "a.h"
              |          ^~~~~
        compilation terminated.
        Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.119s, Critical Path: 0.04s
        INFO: 3 processes: 2 action cache hit, 3 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:liba
  Skipping //main:main -> //liba:a.cpp (non-target)
  Skipping //main:main -> //liba:a.h (non-target)
  Skipping //main:main -> @bazel_tools//tools/cpp:current_cc_toolchain (already exists)
  No changes made, skipping build
Processing node: @bazel_tools//tools/cpp:current_cc_toolchain
  Trying a new candidate set
    Failed to remove //liba:liba -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for @bazel_tools//tools/cpp:current_cc_toolchain -> //libb:libb (because of no in-degree)
    Failed to remove //libb:libb -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove //main:main -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:empty_lib -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:link_extra_lib -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:malloc -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove @rules_cc//:empty_lib -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
  Trying a new candidate set
    Failed to remove @rules_cc//:link_extra_lib -> @bazel_tools//tools/cpp:current_cc_toolchain
  No changes made, skipping build
Processing node: @rules_cc//cc:current_cc_toolchain
  Trying a new candidate set
    Failed to remove @bazel_tools//tools/cpp:current_cc_toolchain -> @rules_cc//cc:current_cc_toolchain
  No changes made, skipping build
Processing node: //liba:a.h
  Trying a new candidate set
    Removed //liba:liba -> //liba:a.h
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 3 targets (2 packages loaded, 0 targets configured)
        Analyzing: 3 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 3 targets (2 packages loaded, 4 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/simple-cxx-project/liba/BUILD:3:11: Compiling liba/a.cpp failed: (Exit 1): gcc failed: error executing CppCompile command (from target //liba:liba) /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer '-std=c++17' -MD -MF ... (remaining 20 arguments skipped)
        
        Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
        liba/a.cpp:1:10: fatal error: a.h: No such file or directory
            1 | #include "a.h"
              |          ^~~~~
        compilation terminated.
        Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.101s, Critical Path: 0.01s
        INFO: 4 processes: 2 action cache hit, 4 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:a.h
  No changes made, skipping build
Processing node: //liba:a.cpp
  Trying a new candidate set
    Removed //liba:liba -> //liba:a.cpp
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 3 targets (1 packages loaded, 0 targets configured)
        Analyzing: 3 targets (1 packages loaded, 0 targets configured)
        
        INFO: Analyzed 3 targets (1 packages loaded, 3 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/simple-cxx-project/main/BUILD:3:10: Linking main/main failed: (Exit 1): gcc failed: error executing CppLink command (from target //main:main) /usr/bin/gcc @bazel-out/k8-fastbuild/bin/main/main-0.params
        
        Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
        ld.lld: error: undefined symbol: add(int, int)
        >>> referenced by main.cpp
        >>>               bazel-out/k8-fastbuild/bin/main/_objs/main/main.pic.o:(main)
        collect2: error: ld returned 1 exit status
        Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.328s, Critical Path: 0.23s
        INFO: 3 processes: 3 action cache hit, 2 internal, 1 linux-sandbox.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:a.cpp
  No changes made, skipping build
